adding additional dependencies