@@ -1,11 +1,22 @@
-plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.3.4'
-	id 'io.spring.dependency-management' version '1.1.6'
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+  dependencies {
+    classpath "org.liquibase:liquibase-core:${liquibase_core_version}"
+  }
 }
 
-group = 'com.product'
-version = '0.0.1-SNAPSHOT'
+plugins {
+	id "java"
+	id "org.springframework.boot" version "${spring_boot_version}"
+	id "io.spring.dependency-management" version "${spring_dependency_management}"
+	id "org.hibernate.orm" version "${hibernate_orm_version}"
+	id "org.graalvm.buildtools.native" version "${graalvm_buildtools_native_version}"
+}
+
+group = "com.product"
+version = "0.0.1-SNAPSHOT"
 
 java {
 	toolchain {
@@ -18,17 +29,47 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.liquibase:liquibase-core'
-	implementation 'org.springframework:spring-jdbc'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation "org.springframework.boot:spring-boot-starter-actuator"
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+	implementation "org.springframework.boot:spring-boot-starter-data-jdbc"
+	implementation "org.springframework.boot:spring-boot-starter-data-r2dbc"
+	implementation "org.springframework.boot:spring-boot-starter-webflux"
+	implementation "org.springframework.boot:spring-boot-starter-validation"
+	implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:${webflux_ui_version}"
+	implementation "org.liquibase:liquibase-core:${liquibase_core_version}"
+	implementation "com.bucket4j:bucket4j-core:${bucket4j_core_version}"
+	developmentOnly "org.springframework.boot:spring-boot-devtools"
+
+	runtimeOnly "org.postgresql:postgresql:${postgresql_version}"
+	runtimeOnly "org.postgresql:r2dbc-postgresql:${r2dbc_postgresql_version}"
+	runtimeOnly("org.liquibase:liquibase-core:${liquibase_core_version}")
+  runtimeOnly("org.liquibase:liquibase-groovy-dsl:${liquibase_groovy_dsl_version}")
+  runtimeOnly "info.picocli:picocli:${picocli_version}"
+  runtimeOnly("org.postgresql:postgresql")
+
+	// Testing
+	testImplementation "org.springframework.boot:spring-boot-starter-test"
+	testImplementation "org.springframework.boot:spring-boot-testcontainers"
+	testImplementation "io.projectreactor:reactor-test"
+	testImplementation "org.springframework.boot:spring-boot-starter-webflux"
+	testImplementation "org.testcontainers:junit-jupiter"
+	testImplementation "org.testcontainers:postgresql"
+	testImplementation "org.testcontainers:r2dbc"
+	testImplementation "org.testcontainers:junit-jupiter:${junit_jupyter_version}"
+  testImplementation "org.testcontainers:postgresql:${testcontainers_postgres_version}"
+	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
+
+graalvmNative {
+	testSupport = false
+	binaries {
+    main {
+      buildArgs.add("--enable-preview")
+    }
+  }
+}
+
